<resources>
    <string name="app_name">Fun-BI</string>
    <string name="start_text">Apakah kamu siap belajar bahasa isyarat dengan cara yang menyenangkan?</string>
    <string name="background">Background</string>
    <string name="global_rank">Global Rank</string>
    <string name="record">My Record</string>
    <string name="hello_user">Hallo, %s!</string>
    <string name="terima_kasih">Terima kasih!</string>
    <string name="contrib_message">Kamu Telah Berkontribusi Dengan Menambah Dataset.</string>
    <string name="gerakan">Gerakan</string>
    <string name="medali">Medali</string>
    <string name="peragakan_kata_dibawah_ini">Peragakan kata dibawah ini!</string>
    <string name="anda_telah_menyelesaikan_permainan_dengan_baik">Anda telah menyelesaikan permainan dengan baik.</string>
    <string name="poin">Poin</string>
    <string name="back_to_home">Back to home</string>
    <string name="ayo_berlatih">Ayo berlatih!</string>
    <string name="peragakan_gerakan_yang_tepat_sesuai_dengan_huruf_yang_diminta_ya">Peragakan gerakan yang tepat sesuai dengan huruf yang diminta ya.</string>
    <string name="peragakan_huruf_dibawah_ini">Peragakan huruf dibawah ini!</string>
    <string name="content_description">Content Description</string>
    <string name="arahkan_kamera_ke_tanganmu">Arahkan kamera ke tanganmu</string>
    <string name="mulai">Mulai</string>
    <string name="selamat">Selamat!</string>
    <string name="anda_telah_menyelesaikan_latihan_bahasa_isyarat_dengan_baik">Anda telah menyelesaikan latihan bahasa isyarat dengan baik</string>
    <string name="poin_yang_kamu_berhasil_dapatkan_adalah">Poin yang kamu berhasil dapatkan adalah</string>
    <string name="alphabet">Alphabet</string>
    <string name="kata_kata_dasar">Kata - Kata Dasar</string>
    <string name="berlatih">Berlatih</string>
    <string name="bermain">Bermain</string>
    <string name="asah_kemampuanmu">Asah Kemampuanmu!</string>
    <string name="belajar_yuk">Belajar Yuk!</string>
    <string name="siap_belajar_bahasa_isyarat_dengan_cara_yang_menyenangkan">Siap belajar bahasa isyarat dengan cara yang menyenangkan?</string>
    <string name="_107">107</string>
    <string name="kontribusi_anda">Kontribusi anda</string>
    <string name="tentang_kami">Tentang kami</string>
    <string name="keluar">Keluar</string>
    <string name="riwayat_permainan">Riwayat Permainan</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="contribution">Contribution</string>
    <string name="profile">Profile</string>
    <string name="kontribusi">Kontribusi</string>
    <string name="kontribusi_anda_akan_membantu_pengembangan_aplikasi_ini_untuk_terus_menebarkan_kebermanfaatan">Kontribusi anda akan membantu pengembangan aplikasi ini untuk terus menebarkan kebermanfaatan!</string>
    <string name="_1_ikuti_gerakan_pada_video_berikut">1. Ikuti gerakan pada video berikut!</string>
    <string name="_2_ambil_video_gerakanmu">2. Ambil video gerakanmu!</string>
    <string name="ambil_video">Ambil Video</string>
    <string name="global_ranking">Global Ranking</string>
    <string name="rekor_tertinggimu">Rekor Tertinggimu</string>
    <string name="peringkat_global">Peringkat Global</string>
    <string name="record_saya">Record Saya</string>
    <string name="judul_record">Judul Record</string>
    <string name="_10">10</string>
    <string name="sisa_waktu">Sisa Waktu: %d</string>
    <string name="waktu_habis">Waktu Habis</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="error_mengambil_data">Error Mengambil Data</string>
    <string name="_100">100</string>
    <string name="_0">0</string>
</resources>