<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/bg_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ayo_berlatih"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/peragakan_gerakan_yang_tepat_sesuai_dengan_huruf_yang_diminta_ya"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/main_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/peragakan_huruf_dibawah_ini"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/image_alphabet"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/alphabet_a"
                android:contentDescription="@string/content_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/main_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/arahkan_kamera_ke_tanganmu"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"/>
            <!-- add camera view-->
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btn_start_practice"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/fill_round_orange"
            android:padding="4dp"
            android:text="@string/mulai"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>