<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.maingame.game.GameResultActivity">

    <ImageView
        android:id="@+id/bg_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/selamat"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/anda_telah_menyelesaikan_permainan_dengan_baik"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/main_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/poin_yang_kamu_berhasil_dapatkan_adalah"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="100"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/orange"
                android:textSize="40sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/poin"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"/>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/regular_blue"
            android:visibility="visible" />


        <Button
            android:id="@+id/btn_back_home"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/fill_round_button"
            android:padding="4dp"
            android:text="@string/back_to_home"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>