<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bg_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/kontribusi"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:text="@string/kontribusi_anda_akan_membantu_pengembangan_aplikasi_ini_untuk_terus_menebarkan_kebermanfaatan"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/main_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_1_ikuti_gerakan_pada_video_berikut"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"/>

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/exoplayerView"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="visible" />

            </com.google.android.exoplayer2.ui.PlayerView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:background="@drawable/main_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_2_ambil_video_gerakanmu"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"/>

            <android.widget.Button
                android:id="@+id/btn_start_contrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:background="@drawable/fill_round_orange"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/ambil_video"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>