<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="64dp">

    <ImageView
        android:id="@+id/bg_mainmenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/leaderboard"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/main_info_graphic"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_height="120dp"
                android:layout_width="0dp"
                android:padding="16dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_myrecord"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/content_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/_1800"
                    android:textSize="24sp"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rekor_tertinggimu"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_height="120dp"
                android:layout_width="0dp"
                android:padding="16dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_globalrank"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/content_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_107"
                    android:layout_marginEnd="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peringkat_global"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:textColor="@color/dark_blue"/>
            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/leaderboard_tab"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="24dp"
            android:background="@drawable/tab_background"
            app:tabGravity="fill"
            app:tabIndicatorGravity="stretch"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@null"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/leaderboard_viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </FrameLayout>

    </LinearLayout>
</FrameLayout>